--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -501,7 +501,7 @@
 
 .nav__sub-title2 {
   margin: 0;
-  padding: 0.25rem 0;
+  padding: 0.25rem;
   font-family: $sans-serif-narrow;
   font-size: $type-size-7;
   font-weight: bold;
