--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -500,7 +500,7 @@
 }
 
 .nav__sub-title2 {
-  margin: 0;
+  margin-bottom: 0.25rem;
   padding: 0.25rem;
   font-family: $sans-serif-narrow;
   font-size: $type-size-7;
